--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "kindle",
+    "notion",
+    "highlights",
+    "scraper"
+  ],
   "author": {
     "name": "ERIK LIU",
     "email": "erikliu0801@gmail.com"
